03-1025: (enhancement) fix overflow of hiv summary in tablet mode (#43)

--- a/packages/esm-hiv-summary-app/src/widgets/hiv-latest-summary/hiv-latest-summary.component.scss
+++ b/packages/esm-hiv-summary-app/src/widgets/hiv-latest-summary/hiv-latest-summary.component.scss
@@ -1,12 +1,11 @@
 @import "../../root.scss";
 @import "~@openmrs/esm-styleguide/src/vars";
 
-.hivLatestSummaryWrapper{
-    margin: 1rem 0;
-    display: flex;
-    height: 25rem;
-    flex-wrap: wrap;
-    flex-direction: column;
+.hivLatestSummaryWrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: $spacing-03 $spacing-05;
+  overflow-x: scroll;
 }
 
 .contraceptionContainer {
